Rewrite of the MQTT test system